--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,17 @@ header{
   box-shadow: 0 3px 0.5rem rgba(0,0,0,.4);
 }
 
+header img {
+  position: absolute;
+  top: 2rem;
+  left: 0.5rem;
+  width:90px;
+}
+
 header h1{
   position: absolute;
   top: 2rem;
-  left: 3rem;
+  left: 6rem;
   font-size: 1.5rem;
   color: white;
 }
