--- a/css/style.css
+++ b/css/style.css
@@ -16,21 +16,21 @@ header{
   width: 100%;
   min-width: 600px;
   height: 6rem;
-  background-color: #333;
+  background-color: #ffb3a7;
   box-shadow: 0 3px 0.5rem rgba(0,0,0,.4);
 }
 
 header img {
   position: absolute;
   top: 2rem;
-  left: 0.5rem;
+  left: 13.8rem;
   width:90px;
 }
 
 header h1{
   position: absolute;
-  top: 2rem;
-  left: 6rem;
+  top: 2.75rem;
+  left: 19.8rem;
   font-size: 1.5rem;
   color: white;
 }
