--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,47 @@ header h1{
   color: white;
 }
 
+
+.navButton {
+  position: absolute;
+  top: 2.25rem;
+  right: 2rem;
+  z-index: 999;
+}
+
+.navButton-line {
+  position: relative;
+  display: block;
+  height: 2px;
+  width: 30px;
+  background: #BBB;
+  transition: ease .5s;
+}
+
+.navButton-line:nth-child(1) { top: 0; }
+.navButton-line:nth-child(2) { margin: 8px 0; }
+.navButton-line:nth-child(3) { top: 0; }
+
+.navButton.isOpen .navButton-line:nth-child(1) {
+  top: 10px;
+  transform: rotate(135deg);
+}
+
+.navButton.isOpen .navButton-line:nth-child(2) {
+  transform: translateY(-50%);
+  opacity: 0;
+}
+
+.navButton.isOpen .navButton-line:nth-child(3) {
+  top: -10px;
+  transform: rotate(-135deg);
+}
+
+
+
+
+
+
 nav {
   position: absolute;
   top: 2.5rem;
