--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,50 @@ header h1{
   position: absolute;
   top: 2.75rem;
   left: 19.8rem;
-  font-size: 1.5vw;/*所有字体大小 根据画面尺寸 自动变换*/
+  font-size: 1.5rem;
   color: white;
 }
+
+
+.navButton {
+  position: absolute;
+  top: 2.25rem;
+  right: 2rem;
+  z-index: 999;
+}
+
+.navButton-line {
+  position: relative;
+  display: block;
+  height: 2px;
+  width: 30px;
+  background: #BBB;
+  transition: ease .5s;
+}
+
+.navButton-line:nth-child(1) { top: 0; }
+.navButton-line:nth-child(2) { margin: 8px 0; }
+.navButton-line:nth-child(3) { top: 0; }
+
+.navButton.isOpen .navButton-line:nth-child(1) {
+  top: 10px;
+  transform: rotate(135deg);
+}
+
+.navButton.isOpen .navButton-line:nth-child(2) {
+  transform: translateY(-50%);
+  opacity: 0;
+}
+
+.navButton.isOpen .navButton-line:nth-child(3) {
+  top: -10px;
+  transform: rotate(-135deg);
+}
+
+
+
+
+
 
 nav {
   position: absolute;
