--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,14 @@ header{
 header img {
   position: absolute;
   top: 2rem;
-  left: 13.5rem;
+  left: 10vw;
   width:90px;
 }
 
 header h1{
   position: absolute;
   top: 2.75rem;
-  left: 19.8rem;
+  left: 15vw;
   font-size: 1.5rem;
   color: white;
 }
@@ -107,7 +107,7 @@ section {
 }
 
 section h1{
-  margin-bottom: 2rem;
+  margin-bottom: -7rem;
   font-size: 4rem;
   color: white;
 }
