--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header{
 header img {
   position: absolute;
   top: 2rem;
-  left: 14vw;
+  left:120px;
   width:60px;
 }
 
@@ -52,8 +52,8 @@ article#VIDEO  {
 
 header h1{
   position: absolute;
-  top: 2.75rem;
-  left: 18vw;
+  top: 20px;
+  left:190px;
   font-size: 1.5rem;
   color: white;
 }
