--- a/css/style.css
+++ b/css/style.css
@@ -271,15 +271,9 @@ a.btn-3db:hover {
 
 
 
-
-
-
-
-
-
 footer{
   padding: 3rem;
-  background-color: #333;
+  background-color:  #ffb3a7;
   color: white;
   text-align: center;
 }
