--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header{
   height: 6rem;
   background-color: #ffb3a7;
   box-shadow: 0 3px 0.5rem rgba(0,0,0,.4);
+  z-index: 999;
 }
 
 header img {
