--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,9 @@ section {
   padding-right: 12%;
   padding-left: 12%;
   min-height: 18rem;
+  width:80%;
+  margin:auto;
+  max-width: 960px;
 }
 
 section h1{
